deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-manager-ui
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-manager
  template:
    metadata:
      labels:
        app: k8s-manager
    spec:
      # serviceAccountName: dev-manager-role
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        ports:
        - containerPort: 4180
          protocol: TCP
        args:
        - --set-xauthrequest=true
        - --pass-access-token=true
        - --pass-authorization-header=true
        - --pass-user-headers=true
        - --session-cookie-minimal=false
        - --cookie-refresh=50s
        - --cookie-expire=1m
      - name: manager
        image: vtrlucas/k8sapp:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-manager-service
  namespace: tools
spec:
  ports:
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: http
  selector:
    app: k8s-manager
